# kvarovi

./: .env.template  .gitignore  Cargo.toml  Makefile  docker-compose.yaml  docker-compose.yml  rustfmt.toml  samconfig.toml  template.yaml
.cargo/: audit.toml
.github/: codecov.yml
.github/workflows/: audit.yml  check.yml  test.yml
beograd_streets/: Cargo.toml  beograd_streets.csv  build.rs
beograd_streets/src/: lib.rs  streets.rs
bot/: Cargo.toml
bot/benches/: escape_markdown.rs
bot/locales/: en.yml  rs.yml  ru.yml
bot/migrations/: 01_init.sql  02_update_preferences.sql  03_messages_index.sql
bot/src/: lib.rs  message_handler.rs  repository.rs  utils.rs
bot/src/messages/: dynamo.rs  mod.rs  models.rs  pg.rs  repository.rs
bot/src/preferences/: dynamo.rs  mod.rs  models.rs  pg.rs  repository.rs
bot/src/repositories/: chat_preference_repository.rs  message_repository.rs  mod.rs  subscription_repository.rs
bot/src/subscriptions/: dynamo.rs  mod.rs  models.rs  pg.rs  repository.rs
bot/src/test/: mock.rs  mod.rs  preferences.rs
bot/tests/: test_dynamo_preferences.rs  test_dynamo_subscriptions.rs
docker/postgis/: 11_import_data.sh  Dockerfile  download-osm.sh
electricity/: Cargo.toml  README.md
electricity/benches/: parse_raw_data.rs
electricity/iam/: dynamodb-policy.json
electricity/src/: address.rs  addresses.rs  db.rs  elektrodistribucija_parser.rs  lib.rs  main.rs  time_interval.rs  translit.rs
electricity/src/addresses/: tests.rs  timetable.txt
mapapp/: .gitignore  Cargo.toml  README.md  index.html
mapapp/src/: main.rs
mapapp/style/: main.scss
utils/: Cargo.toml
