[workspace]
default-members = [
    "electricity",
    "beograd_streets",
]
members = [
    "electricity",
    "utils",
    "beograd_streets",
    "bot"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
aws-config = "0.56"
aws-sdk-dynamodb = "0.30"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
scraper = "0.17"
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
tracing = { version = "0.1", features = ["log"] }