[workspace]
default-members = [
    "electricity",
    "beograd_streets",
]
members = [
    "electricity",
    "utils",
    "beograd_streets",
    "bot"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-dynamodb = "1"
scraper = "0.18"
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
tracing = { version = "0.1", features = ["log"] }
itertools = "0.12"

[patch.crates-io]
# bollard-stubs = { version = "1.43.0-rc.1" }