[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
teloxide-core = "0.9"
dotenvy = "0.15"
anyhow = "1"
redis = { version = "0.23", features = ["tokio-comp"] }
rust-i18n = { version = "2", default-features = false, features = [] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
async-trait = { version = "0.1"}
electricity = { path = "../electricity" }
tracing = { workspace = true }
chrono = { version = "*"}