[package]
name = "electricity"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
lambda_runtime = "0.8"
nom = "7"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[dev-dependencies]
proptest = "1"