[package]
name = "electricity"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
lambda_runtime = "0.8"
nom = "7"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.16.0"
aws-config = "0.55.2"
aws-sdk-dynamodb = "0.27.0"
uuid = { version = "1.3.2", features = ["v4"] }
anyhow = "1.0.71"
dotenvy = "0.15.7"
futures = "0.3.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
beograd_streets = { path = "../beograd_streets" }

[dev-dependencies]
proptest = "1"