[package]
name = "electricity"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
scraper = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
lambda_runtime = "0.8"
nom = "7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
aws-config = "0.56"
aws-sdk-dynamodb = "0.30"
uuid = { version = "1.3.2", features = ["v4"] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
beograd_streets = { path = "../beograd_streets" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
fnv = "1"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.4", features = ["html_reports", "async_futures"] }

[features]
lambda = []

[[bench]]
name = "parse_raw_data"
harness = false