[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
scraper = "0.16"
futures = "0.3"