[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
scraper = { workspace = true }

reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }